--- a/.gitconfig
+++ b/.gitconfig
@@ -6,12 +6,14 @@
 [core]
 	editor = nvim
 [alias]
+	patch = apply --reject --whitespace=fix
   pushall = !git remote | xargs -L1 git push --all
   p = pushall
-	patch = apply --reject --whitespace=fix
+	d = diff
 	a = add
 	st = status
 	s = status
+	ca = commit --amend
 	cm = commit -m
 	c = commit -m
 [color]
