--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,5 +14,5 @@ bind-key k select-pane -U
 bind-key v split-window -h
 
 bind-key R source-file ~/.tmux.conf\; display-message "source-file done"
-bind-key ? display-popup -E "tmux list-keys | fzf";
-bind-key t display-popup;
+bind-key ? display-popup -w 90% -h 90% -E "tmux list-keys | fzf";
+bind-key t display-popup -w 70% -h 70%;
