--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,17 +2,19 @@ unbind C-b
 set -g prefix `
 bind ` send-prefix
 
+set -g mouse on
 set -g base-index 1
 set -g pane-base-index 1
 
-set -g mouse on
+set-option -g status-right "#{pane_current_path}"
 
 bind-key h select-pane -L
 bind-key l select-pane -R
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key v split-window -h
+bind-key b split-window
 
 bind-key R source-file ~/.tmux.conf\; display-message "source-file done"
 bind-key ? display-popup -w 90% -h 90% -E "tmux list-keys | fzf";
-bind-key t display-popup -w 70% -h 70%;
+bind-key t display-popup -w 70% -h 70% -d "#{pane_current_path}";
